<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reminders.android.remindersapp.MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/promise_prompt"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promise_prompt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/promise_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/a11y_min_height"
            android:id="@+id/btn_accept"
            android:text="@string/btn_accept"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/a11y_min_height"
            android:id="@+id/btn_new_suggestion"
            android:text="@string/btn_new_suggestion"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/promise_accepted"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promise_accepted_prompt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/promise_content_accepted"
            />

    </LinearLayout>

</LinearLayout>
